dark mode optimizacion

--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,13 +1,16 @@
-.darkContainer{
+.component {
+  background-color: #FFFFFF;
+  }
+  .component-dark{
     background-color: #010003;
-     color: #FFFFFF;
-}
-.lightContainer{
-   background-color: rgb(253, 245, 245);
+    color: #FFFFFF;
+  }
+  .component-light{
+    background-color: rgb(253, 245, 245);
     color: #302F2C;
-}
+  }
+
 body {
     margin: 0;
     font-family: Arial, sans-serif !important;
-
 }
