--- a/client/src/components/bars/navBar/navBar.module.css
+++ b/client/src/components/bars/navBar/navBar.module.css
@@ -2,22 +2,40 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  position: fixed;
+  z-index: 9998;
+  top: 0;
   width: 100%;
-  height: 4rem;
-  border-bottom: 1px solid green;
-}
-.component-light {
-  background-color: red;
-  border: none;
-}
-.component-dark {
-  background-color: #010003;
-}
+  height: 10vh;
+  }
+  .component-light {
+    background-color: rgba(251, 251, 252, 0.623);
+  }
+  .component-dark {
+    background-color: #010003;
+  }
 
-.button {
+  .button {
+    background-color: transparent;
+    border: none;
+    }
 
-}
-
-.link{
-
-}
+    .link {
+      font-size: 100%;
+      text-transform: uppercase;
+      text-decoration: none;
+      letter-spacing: 0.2em;
+      transition: font-size 0.3s;
+      font-weight: bold;
+    }
+    .link:hover {
+      font-size: 125%;
+      text-shadow:  0px 3px 12px rgb(128, 255, 255);
+      cursor: pointer;
+    }
+    .link-light {
+      color: rgba(2, 14, 17, 0.932);
+    }
+    .link-dark {
+      color: rgba(247, 249, 250, 0.932);
+    }
