--- a/client/src/components/bars/navBar/navBar.module.css
+++ b/client/src/components/bars/navBar/navBar.module.css
@@ -7,7 +7,9 @@
   top: 0;
   width: 100%;
   height: 10vh;
-  }
+  animation:blur-in 0.4s linear both
+  } @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
+
   .component-light {
     background-color: rgba(251, 251, 252, 0.623);
   }
@@ -21,7 +23,7 @@
     }
 
     .link {
-      font-size: 100%;
+      font-size: 120%;
       text-transform: uppercase;
       text-decoration: none;
       letter-spacing: 0.2em;
@@ -29,7 +31,7 @@
       font-weight: bold;
     }
     .link:hover {
-      font-size: 125%;
+      font-size: 135%;
       text-shadow:  0px 3px 12px rgb(128, 255, 255);
       cursor: pointer;
     }
