--- a/client/src/components/views/HomePage/HomePage.module.css
+++ b/client/src/components/views/HomePage/HomePage.module.css
@@ -6,7 +6,6 @@
   justify-content: center;
   gap: 30px;
 
-
   animation:blur-in 0.4s linear both
   }
   @keyframes blur-in {
@@ -24,6 +23,7 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+  margin: 5% 0;
   transition: transform 0.3s, filter 0.3s;
   }
   .sectionBanner:hover {
@@ -100,272 +100,3 @@
 .text-dark {
   color: white;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .logolight {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  width: 40%;
-  left: 0;
-  font-size: 32px;
-  color: rgb(3, 29, 33);
-  text-shadow: 2px 3.5px 2px rgba(6, 103, 116, 0.774);
-}
-.logodark {
-  width: 40%;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  width: 40%;
-  left: 0;
-  font-size: 32px;
-  color: rgb(255, 255, 255);
-  text-shadow: 2px 3.5px 2px rgb(39, 126, 197);
-}
-
-
-
-.h1light {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  letter-spacing: 10px;
-  padding-top: 8%;
-  font-size: 32px;
-  color: rgb(0, 140, 158);
-  transition: transform 0.3s, filter 0.3s;
-  text-shadow: 2px 3.5px 2px rgba(0, 221, 250, 0.672);
-}
-
-.h1light:hover {
-  transform: scale(1.2);
-  transform-origin: center;
-}
-
-.h1dark {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 8%;
-
-  letter-spacing: 10px;
-  font-size: 32px;
-  color:  rgba(0, 221, 250, 0.672);
-  transition: transform 0.3s, filter 0.3s;
-  text-shadow: 2px 3.5px 2px  rgb(36, 3, 73);
-}
-
-.h1dark:hover {
-  transform: scale(1.2);
-  transform-origin: center;
-}
-
-.containerlight {
-  display: flex;
-  flex-direction: column;
-  padding-top: 4%;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  padding-bottom:14%;
-  animation:blur-in 0.4s linear both} @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
-
-
-.containerdark {
-  margin-bottom:4%;
-  display: flex;
-  flex-direction: column;
-  padding-top: 4%;
-  width: 100%;
-  padding-bottom:14%;
-  justify-content: center;
-  align-items: center;
-  animation:blur-in 0.4s linear both} @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
-.pagination {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  width: min-content;
-}
-
-.paginationbuttonlight {
-  margin: 1%;
-  background-color: rgb(247, 246, 246);
-  color: rgb(0, 0, 0);
-  transition: transform 0.6s;
-}
-
-.paginationbuttonlight:hover {
-  background-color: rgb(0, 0, 0);
-  color: rgb(248, 248, 248);
-  transform: scale(1.4);
-}
-
-.paginationbuttondark {
-  margin: 1%;
-  background-color: rgb(0, 0, 0);
-  color: rgb(247, 246, 246);
-  transition: transform 0.6s;
-}
-
-.paginationbuttondark:hover {
-  background-color: rgb(0, 0, 0);
-  color: rgb(247, 246, 246);
-  transform: scale(1.4);
-}
-
-@keyframes borderGradientAnimation1 {
-  0% {
-    border-image: linear-gradient(to right, #ff00ff, #ff0000);
-  }
-  20% {
-    border-image: linear-gradient(to right, #ff0000, #800080);
-  }
-  40% {
-    border-image: linear-gradient(to right, #800080, #0000ff);
-  }
-  60% {
-    border-image: linear-gradient(to right, #0000ff, #00ffff);
-  }
-  80% {
-    border-image: linear-gradient(to right, #00ffff, #ff00ff);
-  }
-  100% {
-    border-image: linear-gradient(to right, #ff00ff, #ff00ff);
-  }
-}
-
-.imgcat {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  margin-right: 20px;
-}
-.spanlight {
-  color: #010118;
-  letter-spacing: 10px;
-  width: 80%;
-
-margin:3%;}
-
-
-.spandark {
-  color: #ffffff;
-  letter-spacing: 10px;
-  width: 80%;
-
-margin:3%;}
-
-.h2light {
-  display: flex;
-  margin-left: 3%;
-  width: 80%;
-  align-items: center;
-  font-size: 22px;
-  color: rgb(3, 30, 34);
-}
-.h2dark {
-  display: flex;
-  margin-left: 3%;
-  width: 80%;
-  align-items: center;
-  font-size: 22px;
-  color: rgb(253, 255, 255);
-}
-.newsimg{
-  margin-left:4%;
-  position: relative;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  border: 2px solid white;
-}
-.plight {
- margin-left: 3%;
- font-size: 11px;
- width: 80%;
-
-}
-.pdark {
-  width: 80%;
-
-  margin-left: 3%;
-  font-size: 11px;
- }
-
- .ullight {
-  margin: 3%;
-  width: 60%;
-  height: 20%;
-  overflow: hidden;
-  font-size:  1.3em;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 4;
-  line-clamp: 4;
-  text-overflow: ellipsis;
-}
-
-.uldark {
-  margin: 3%;
-  overflow: hidden;
-  width: 60%;
-  font-size:  1.3em;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 4;
-  line-clamp: 4;
-  text-overflow: ellipsis;}
-
-  .alight {
-    margin-left: 3%;
-    width: 80%;
-    font-size: 20px; 
-    color: #000000;
-    text-decoration: none;
-   }
-   .alight:hover {
-    cursor: pointer;
-   }
-   .adark {
-    color: #ffffff;
-    width: 80%;
-    text-decoration: none;
-     margin-left: 3%;
-     font-size: 20px;
-    }
-    .adark:hover {
-      cursor: pointer;
-      }
-
-.news{
-  margin-top:-10%;
-  width:90%;
-  transition: transform 0.3s, filter 0.3s;
-
-}
-.news:hover{
-  transform: scale(1.1);
-} */
