--- a/client/src/components/views/AdminPanel/AdminPanel.module.css
+++ b/client/src/components/views/AdminPanel/AdminPanel.module.css
@@ -8,8 +8,15 @@
 }
 
 .mainButton {
-  
-}
+  background-color: white;
+  color: black;
+  padding: 1%;
+
+  border: 2px solid black;
+  }
+  .mainButton h1 {
+    font-size: 1.3em;
+  }
 
 .categoriesPanel {
   display: flex;
@@ -17,7 +24,7 @@
   width: 96vw;
   margin: 2vw;
   }
-  .categoriesPosting {
+  .categoriesForm {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -47,13 +54,53 @@
       align-items: center;
       gap: 1rem;
     }
-    .deleteCategory {
 
+/* /////////////////////////////////////////////////////// */
+.coursesPanel {
+  display: flex;
+  flex-direction: column;
+  width: 96vw;
+  margin: 2vw;
+  }
+  .coursesForm {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: white;
+    color: black;
+    padding: 20px;
+
+  }
+  .coursesBox {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: white;
+    color: black;
+    padding: 20px;
+    }
+    .course {
+      display: grid;
+      grid-template-columns: repeat(3, 2fr);
+      justify-items: center;
+      margin:1%;
+      width: 80%;
+      border: 2px solid wheat;
+      height:100px;
+      justify-content: space-evenly;  
+      background-color: #fafafa;
+      color: rgb(0, 0, 0);
+      padding: 20px;  
     }
 
-
-
-
+.h1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4; 
+  line-clamp: 4; 
+  text-overflow: ellipsis;
+  font-size: 12px;
+  color: rgb(0, 0, 0);
+}
 
 
 /* .h1light {
