--- a/client/src/components/views/Shop/Shop.module.css
+++ b/client/src/components/views/Shop/Shop.module.css
@@ -1,13 +1,14 @@
-.comprasContainer {
+.component {
+    margin-top: 10vh;
+    padding-bottom: 20vh;
+    min-height: 70vh;
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
 }
 
 /* __________________________________________________ */
 .comprasCover {
     width: 100%;
-    border: 1px solid red;
     height: 50%
 }
 
