--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,13 +1,13 @@
-.darkContainer{
-    background-color: #010003;
-     color: #FFFFFF;
+.component-dark{
+  background-color: #010003;
+  color: #FFFFFF;
 }
-.lightContainer{
-   background-color: rgb(253, 245, 245);
-    color: #302F2C;
+.component-light{
+  background-color: rgb(253, 245, 245);
+  color: #302F2C;
 }
-body {
-    margin: 0;
-    font-family: Arial, sans-serif !important;
 
+body {
+  margin: 0;
+  font-family: Arial, sans-serif !important;
 }
