--- a/client/src/components/bars/searchBar/searchBar.module.css
+++ b/client/src/components/bars/searchBar/searchBar.module.css
@@ -1,184 +1,79 @@
+.component:hover {
+  cursor: pointer;
+}
 
-  .lightContainer {
-    display: flex;
-    justify-content: center;
-    background-color: #ffffff;
-    color: #302f2c;
+.searchOff {
+  animation:blur-in-1 0.4s linear both
+} @keyframes blur-in-1{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
+
+.label {
+  margin: 0;
+  font-size: 150%;
+  letter-spacing: 0.3em;
+  transition: transform 0.3s;
   }
-  
-  .h1light {
-    font-size: 22px;
-    color: black;
-    transition: transform 0.3s
+  .label:hover {
+    transform: scale(1.2);
+    text-shadow:  0px 3px 12px rgb(128, 255, 255);
   }
-  .h1dark {
-    font-size: 22px;
+  .label-light {
+    color: black
+  }
+  .label-dark {
     color: white;
-    transition: transform 0.3s
-  }
-  .h1light:hover {transform: scale(1.2);
-    cursor: pointer;
-  }
-  .h1dark:hover {transform: scale(1.2);
-    cursor: pointer;
   }
 
+.searchOn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
+  animation:blur-in-2 0.4s linear both
+  } @keyframes blur-in-2{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
 
-  .buttondark {
-    background-color: #302f2c;
-      color: white;
-    border: 2px solid white;
+  .input {
+    height: 5vh;
+    width: 15rem;
+    padding: 10px;
+    outline: none;
+    border: 3px solid;
+    background-clip: padding-box;
+    animation: borderGradientAnimation1 3s linear infinite;
   }
-  .inputdark {
-    display: flex;
-    align-items: center;
-    background-color: #000000;
-    color: rgb(255, 255, 255);
-    border: 1px solid rgb(255, 255, 255);
-    margin-right: 2%;
-    font-size: 16px;}
-
-  .inputlight {
-    display: flex;
-    align-items: center;
-    background-color: #ffffff;
-    color: rgb(0, 0, 0);
-    border: 1px solid black;
-    margin-right: 2%;
-    padding: 5px;
-    font-size: 16px;
-  }
-  
-  .buttonlight {
-    background-color: white;
-    color: black;
-    border: 2px solid black;
-  }
-  
-  .containerlight {
-    display: flex;
-    align-items: center;
-    animation:blur-in 0.4s linear both} @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
-
-  .labellight {
-    color: black;
-  }
-  
-  .containerdark {
-    display: flex;
-    justify-content: center;
-    background-color: #000000;
-    color: #ffffff;
-    animation:blur-in 0.4s linear both} @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
-
-    
-  
-  .plight {
-    background-color: white;
-    width: min-content;
-    color: black;
-    padding:2%;
-    border: 1px solid rgb(7, 0, 0); 
-     border-radius: 50%; 
-      margin-left: 1%;
-     transition: transform 0.3s
+  @keyframes borderGradientAnimation1 {
+    0% {
+      border-image: linear-gradient(to right, #ff00ff, #ff0000) 1;
     }
-     
-  .pdark {
-    width: min-content;
-    border-radius: 50%;
-    margin-left: 1%;
-    padding:2%;
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-    border: 1px solid rgb(255, 255, 255); 
-    transition: transform 0.3s
+    20% {
+      border-image: linear-gradient(to right, #ff0000, #800080) 1;
+    }
+    40% {
+      border-image: linear-gradient(to right, #800080, #0000ff) 1;
+    }
+    60% {
+      border-image: linear-gradient(to right, #0000ff, #00ffff) 1;
+    }
+    80% {
+      border-image: linear-gradient(to right, #00ffff, #ff00ff) 1;
+    }
+    100% {
+      border-image: linear-gradient(to right, #ff00ff, #ff00ff) 1;
+    }
   }
 
-    .plight:hover {
+  .button {
+    background: none;
+    border: none;
+    }
+    .button:hover {
       cursor: pointer;
-      transform: scale(1.3);}
-    .pdark:hover {
-      cursor: pointer;
-      transform: scale(1.3);}
-  
-  .divlight {
-    /* Estilos para div en modo claro */
-  }
-  
-  .spanlight {
-    /* Estilos para span en modo claro */
-  }
-  
-  .formlight {
-    /* Estilos para form en modo claro */
-  }
-  
-  .hrlight {
-    /* Estilos para hr en modo claro */
-  }
-  
-  .errorlight {
-    /* Estilos para error en modo claro */
-  }
-  
-  .successlight {
-    /* Estilos para success en modo claro */
-  }
-  
-  .linklight {
-    /* Estilos para link en modo claro */
-  }
-  
-  .ullight {
-    /* Estilos para ul en modo claro */
-  }
-  
-  .h2light {
-    /* Estilos para h2 en modo claro */
-  }
-  
-
-  
-  .labeldark {
-    color: white;
-  }
-  
-
-  
-  .divdark {
-    /* Estilos para div en modo oscuro */
-  }
-  
-  .spandark {
-    /* Estilos para span en modo oscuro */
-  }
-  
-  .formdark {
-    /* Estilos para form en modo oscuro */
-  }
-  
-  .hrdark {
-    /* Estilos para hr en modo oscuro */
-  }
-  
-  .errordark {
-    /* Estilos para error en modo oscuro */
-  }
-  
-  .successdark {
-    /* Estilos para success en modo oscuro */
-  }
-  
-  .linkdark {
-    /* Estilos para link en modo oscuro */
-  }
-  
-  .uldark {
-    /* Estilos para ul en modo oscuro */
-  }
-  
-  .h2dark {
-    /* Estilos para h2 en modo oscuro */
-  }
-  
+      }
+      .buttonIcon {
+        font-size: 20px;
+      }
+      .buttonIcon-light {
+        fill: black;
+      }
+      .buttonIcon-dark {
+        fill: white;
+      }
