--- a/client/src/components/views/CoursePage/CoursePage.module.css
+++ b/client/src/components/views/CoursePage/CoursePage.module.css
@@ -1,8 +1,8 @@
-.component{
-  padding-top: 5%;
+.component {
+  margin-top: 10vh; 
   padding-bottom: 20%;
-  animation:blur-in 0.4s linear both} 
-  @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}} 
+  animation:blur-in 0.4s linear both
+  } @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}} 
 
 .mainBanner {
     background-image: linear-gradient(to right,  #000000, #434343);
