--- a/client/src/components/bars/Footer/Footer.module.css
+++ b/client/src/components/bars/Footer/Footer.module.css
@@ -1,14 +1,14 @@
-.component{
+.component {
   display: flex;
-  flex-direction: row;
-  width: 100%;
-  position: fixed;
   align-items: center;
   justify-content:space-around;
+  justify-items: center;
+  position: fixed;
+  /* bottom => 0 */
   bottom: -35%;
   padding-bottom: 20%;
+  width: 100%;
   color: #000000;
   border-radius:100%;
-  justify-items: center;
   animation: blur-in 0.2s linear both} @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}
 }
