--- a/client/src/components/bars/filterBar/FilterBar.module.css
+++ b/client/src/components/bars/filterBar/FilterBar.module.css
@@ -1,25 +1,21 @@
 .component {
   color: aliceblue;
+  display:flex;
   background-color: rgba(0, 0, 0, 0.672);
-  width:400px;
-  height: 9%;
-  position: absolute;
+  width: 100%;
+  height: 4%;
+  margin-top: -1%;
+  align-items: center;
+  justify-content: space-around;
   z-index: 1;
-  animation:scale-up-vertical-top 0.4s linear} 
-  @keyframes scale-up-vertical-top{0%{transform:scaleY(.4);transform-origin:center top}100%{transform:scaleY(1);transform-origin:center top}}
-   
-  
-  .Box{
-    margin-bottom:-4%;
-   }
-.item{
+  animation:blur-in 1s linear both} @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
+.item {
   font-size: 70%;
   margin-bottom:-1%;
   display: flex;
   justify-content: center;
   justify-items: center;
-  align-items: center;
-  
+  align-items: center; 
 }
 .options{
   scale:0.7;
