--- a/client/src/components/bars/navBar/navBar.module.css
+++ b/client/src/components/bars/navBar/navBar.module.css
@@ -1,4 +1,6 @@
 .component {
+  /* AJUSTAR LAS DEMAS PAGINAS EN BASE AL HEIGHT DE ESTE COMPONENTE => PAGINA 1 - .component {margin-top: 10vh}*/
+  height: 10vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -7,7 +9,6 @@
   /* TOP: ELIMINA CUALQUIER ESPACIO ENTRE EL TOPE DE LA PAGINA Y EL ELEMENTO */
   top: 0;
   width: 100%;
-  height: 10vh;
   animation:blur-in 0.4s linear both
   } @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
 
