--- a/client/src/components/datos/CourseCard/CourseCard.module.css
+++ b/client/src/components/datos/CourseCard/CourseCard.module.css
@@ -1,10 +1,13 @@
 .cardContainer {
   display: inline-block;
   margin: 10px;
+  padding: 4%;
+  padding-bottom: 10%;
   animation:scale-up-horizontal-center 0.6s}
    @keyframes scale-up-horizontal-center{0%{transform:scaleX(.2)}100%{transform:scaleX(1)}}
 
 .card {
+  
   padding: 10%;
   width: 300px;
   height: 200px;
@@ -15,7 +18,7 @@
 .cardContent {
   width: 100%;
   height: 100%;
-
+ 
   transition: transform 0.6s;
   transform-style: preserve-3d;
 }
@@ -35,12 +38,10 @@
 .front {
   z-index: 2;
   transform: rotateY(0deg);
-  background-color: #f8f9fa;
 }
 
 .back {
   transform: rotateY(180deg);
-  background-color: #e9ecef;
 }
 
 .flipped {
@@ -53,11 +54,10 @@
 }
 
 .title{
-  background-color: rgb(0, 0, 0);
   align-items: center;
-  position: absolute;
-  left: 40%;
-  color: #e9ecef;
+  position: fixed;
+  top: -10%;
+
 }
 
 .description  {
