--- a/client/src/components/views/Commingsoon/Commingsoon.module.css
+++ b/client/src/components/views/Commingsoon/Commingsoon.module.css
@@ -1,5 +1,5 @@
 .h1light{
-    margin-top: 4%;
+    margin-top: 10vh;
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 0, 0);
