--- a/client/src/components/views/Detail/Detail.module.css
+++ b/client/src/components/views/Detail/Detail.module.css
@@ -1,8 +1,8 @@
 .container {
+    margin-top: 10vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
   }
   .name {
     font-size: 14px;
