--- a/client/src/components/views/Shop/Shop.module.css
+++ b/client/src/components/views/Shop/Shop.module.css
@@ -26,106 +26,109 @@
   border: 1px solid black
   }
   .sidebar {
+    display: flex;
+    flex-direction: column;
+    height: 50vh;
+    width: 25vw;
+    border: 1px solid blue;
+    }
+
+    .filterCategory {
       display: flex;
       flex-direction: column;
-      height: 50vh;
-      width: 25vw;
-      border: 1px solid blue;
-      }
-
-      .filterCategory {
-          display: flex;
-          flex-direction: column;
-          flex-wrap: wrap;
-      }
-      .filterCategory input {
-          margin: 0;
-          width: 1rem;
-          cursor: pointer;
-          height: 1rem;
-          padding: 0;
-      }
+      flex-wrap: wrap;
+    }
+    .filterCategory input {
+      margin: 0;
+      width: 1rem;
+      cursor: pointer;
+      height: 1rem;
+      padding: 0;
+    }
 
   .productBox {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: min(2%);
+    width: 100%;
+    height: 20%;
+    }
+    .item {
       display: flex;
-      justify-content: space-evenly;
-      flex-wrap: wrap;
-      gap: 10px;
-      padding: min(2%);
-      width: 100%;
-      height: 20%;
+      flex: 0 0 auto;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 200px;
+      padding: 1%;
+      border-radius: 5%;
+      background-color: #fff;
+      border: 2px solid #000;
+      transition: transform 0.3s, filter 0.3s;
+    }
+    .item:hover {
+      transform: scale(1.2);
       }
-      .item {
-          flex: 0 0 auto;
-          width: 200px;
-          padding: 1%;
-          border-radius: 5%;
-          background-color: #fff;
-          border: 2px solid #000;
-          transition: transform 0.3s, filter 0.3s;
+      .item img {
+        width: 100px;
+        height: 100px;
+        object-fit: contain;
       }
-      .item:hover {
-          transform: scale(1.2);
-          }
-          .item img {
-              width: 100px;
-              height: 100px;
-              object-fit: contain;
-          }
-          .name {
-              font-size: 14px;
-              color: #888;
-              margin-bottom: 18px;
-          }
-          .price {
-              font-size: 100%;
-              margin-bottom: 5px;
-              color: #007bff;
-              font-weight: bold;
-              margin-left: 4%;
-          }
-          .item button {
-              z-index: 9997;
-              margin-left: 45%;
-              padding: 0.5em;
-              border-radius: 14%;
-              background-color: #007bff;
-              color: #fff;
-              cursor: pointer;
-              transition: transform 0.3s, filter 0.3s;
-          }
-          .item button:hover {
-              background-color: rgb(161, 247, 190);
-              color: #000000;
-              transform: scale(1.2);
-          }
-          .cartIcon {
-              margin-right: 5%;
-          }
+      .name {
+        font-size: 14px;
+        color: #888;
+        margin-bottom: 18px;
+      }
+      .price {
+        font-size: 100%;
+        margin-bottom: 5px;
+        color: #007bff;
+        font-weight: bold;
+        margin-left: 4%;
+      }
+      .item button {
+        z-index: 9997;
+        margin-left: 45%;
+        padding: 0.5em;
+        border-radius: 14%;
+        background-color: #007bff;
+        color: #fff;
+        cursor: pointer;
+        transition: transform 0.3s, filter 0.3s;
+      }
+      .item button:hover {
+        background-color: rgb(161, 247, 190);
+        color: #000000;
+        transform: scale(1.2);
+      }
+      .cartIcon {
+        margin-right: 5%;
+      }
 
-          .cartTooltip {
-              position: absolute;
-              padding: 1%;
-              margin-left: 30%;
-              background-color: #007bff;
-              color: #fff;
-              border-radius: 4px;
-              font-size: 14px;
-              transition: transform 0.3s;
-          }
-          .item:hover .cartTooltip {
-              transform: translate(-50%, 10%);
-              animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-          }  @keyframes slide-in-right {
-              0% {
-                  transform: translateX(4px) translateY(-25px);
-                  opacity: 0;
-              }
-              100% {
-                  transform: translateX(-2px) translateY(-25px);
-                  opacity: 1;
-              }
-          }
+        .cartTooltip {
+            position: absolute;
+            padding: 1%;
+            margin-left: 30%;
+            background-color: #007bff;
+            color: #fff;
+            border-radius: 4px;
+            font-size: 14px;
+            transition: transform 0.3s;
+        }
+        .item:hover .cartTooltip {
+            transform: translate(-50%, 10%);
+            animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        }  @keyframes slide-in-right {
+            0% {
+                transform: translateX(4px) translateY(-25px);
+                opacity: 0;
+            }
+            100% {
+                transform: translateX(-2px) translateY(-25px);
+                opacity: 1;
+            }
+        }
 
 .section4 {
   display: flex;
