--- a/client/src/components/datos/Bag/Bag.module.css
+++ b/client/src/components/datos/Bag/Bag.module.css
@@ -1,19 +1,23 @@
 .shopbagOverlay {
-    position: fixed;
-    top: 10vh;
-    z-index: 9998;
-    height: 90vh;
-    width: 100vw;
-    background-color: rgba(0, 0, 0, 0.5);
+  top: 12vh;
+  position: fixed;
+  z-index: 9998;
+  height: 88vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.5);
   }
-  
   .shopbag {
     position: fixed;
     top: 10vh;
-    right: 0;
+    right: -300px;
     z-index: 9999;
     height: 90vh;
     width: 30vw;
     background-color: blue;
     border: 1px solid black;
+    transition: right 2s ease-in-out;
   }
+  .shopbag.open {
+    right: 0;
+  }
+  
