--- a/client/src/components/views/Detail/Detail.module.css
+++ b/client/src/components/views/Detail/Detail.module.css
@@ -1,5 +1,6 @@
 .container {
-    margin-top: 10vh;
+    margin-top: var(--navBarHeight);
+    min-height: calc(100vh - var(--navBarHeight));
     display: flex;
     flex-direction: column;
     align-items: center;
