--- a/client/src/components/datos/Bag/Bag.module.css
+++ b/client/src/components/datos/Bag/Bag.module.css
@@ -1,23 +1,49 @@
 .shopbagOverlay {
-  top: 12vh;
+  margin-top: var(--navBarHeight);
+  min-height: calc(99vh - var(--navBarHeight) - 4vw);
   position: fixed;
   z-index: 9998;
-  height: 88vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.5);
   }
   .shopbag {
+    top: var(--navBarHeight);
+    height: calc(100vh - var(--navBarHeight));
+    width: 30vw;
     position: fixed;
-    top: 10vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2vw 0;
+    gap: 10px;
     right: -300px;
     z-index: 9999;
-    height: 90vh;
-    width: 30vw;
-    background-color: blue;
-    border: 1px solid black;
+    background-color: grey;
+    border: 1px solid red;
     transition: right 2s ease-in-out;
   }
   .shopbag.open {
     right: 0;
   }
   
+.item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 12rem;
+  height: 4rem;
+  /* background-color: black; */
+  border: 1px solid yellow;
+  }
+  .minusPlus {
+    width: 2rem;
+    height: 2rem;
+  }
+  .img {
+    width: 4rem;
+    height: 4rem;
+    object-fit: cover;
+    border-radius: 100%;
+    border: solid 2px;
+    border-color: rgba(248, 248, 248, 0.658);
+  }
