Revert "Frontend sebastian"

--- a/client/src/components/datos/Bag/Bag.module.css
+++ b/client/src/components/datos/Bag/Bag.module.css
@@ -40,19 +40,19 @@
     box-shadow: rgba(0, 0, 0, 0.50) 20px 0 0;
   }
   .shopbagOpen {
-        /* animation: sdf 0.4 ; */
+        animation: sdf 0.4 ;
     } @keyframes sdf {
         0% {
             transform: scaleX(1);
             transform-origin: left center;
             opacity: 1;
-        }
-        100% {
-        transform: scaleX(0.4);
-        transform-origin: left center;
-        opacity: 0;
-        }
-    }
+          }
+          100% {
+            transform: scaleX(0.4);
+            transform-origin: left center;
+            opacity: 0;
+          }
+  }
 
 .itemContainer {
     display: flex;
