--- a/client/src/components/views/Shop/Shop.module.css
+++ b/client/src/components/views/Shop/Shop.module.css
@@ -55,7 +55,6 @@
   }
     .searchButton {
       position: absolute;
-      border: none;
       margin-left: 14%;
       transition: transform 0.3;
       background-color:#a1f7be7c;
@@ -68,7 +67,7 @@
 
   .sidebar {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
     margin-bottom: 25px;
@@ -77,7 +76,8 @@
     border: 4px solid rgba(0, 0, 0, 0.096);
     background-color:#a1f7be7c;
     transition: transform 0.3s, filter 0.3s,width 0.2s;
-    border-radius: 5%;
+   border-radius: 5%;
+   
   }
   .sidebar > div {
     margin-bottom: 15px;
