--- a/client/src/components/datos/LoginForm/LoginForm.module.css
+++ b/client/src/components/datos/LoginForm/LoginForm.module.css
@@ -2,11 +2,8 @@
   justify-content: center;
   height:fit-content;
   width: 340px;
-  margin: 0 auto;
-  margin-top: 5%;
-  left: 100%;
   padding: 20px;
-  background-image: linear-gradient(to right, rgba(27, 149, 155, 0.68), rgba(102, 51, 153, 0.401));
+  background-image: linear-gradient(to right, rgba(27, 149, 155, 0.822), rgba(102, 51, 153, 0.658));
   border-radius: 4px;
   animation: scale-up-vertical-top 0.4s linear;
   position: fixed;
@@ -16,10 +13,10 @@
 .container{
   color: aliceblue;
   background-color: rgba(0, 0, 0, 0.672);
-  width: infinite;
-  height: infinite;
   display:flex;
-  position: absolute;
+  position: fixed;
+  left:35.7%;
+  top:-260%;/*  */
   justify-content: center;
   justify-items: center;
   align-items: center;
@@ -123,7 +120,7 @@
               .boton:hover {
                 background-color: #0023944f;
                 opacity: 1;
-                padding-right: 425px;
+                padding-right: 325px;
             
               }
               
