--- a/client/src/components/datos/CoursesCard/CoursesCard.module.css
+++ b/client/src/components/datos/CoursesCard/CoursesCard.module.css
@@ -9,7 +9,6 @@
 .paginado{
   display: flex;
   justify-content: space-around;
-  margin-top: -3%;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.672);
   color: rgb(246, 251, 255);
@@ -27,4 +26,11 @@
   width: 10%;
   padding: 7px 100%;
   border-radius: 4px;
+}
+
+.coursesBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
