--- a/client/src/components/datos/CoursesDetails/CoursesDetails.module.css
+++ b/client/src/components/datos/CoursesDetails/CoursesDetails.module.css
@@ -1,7 +1,8 @@
 .component {
   height: 100vh;
   scale: 0.8;
-  padding-bottom: 10%;
+  padding-bottom: 40%;
+  
 }
 .component-dark {
   background-color: #000000;
@@ -9,13 +10,25 @@
 }
 
 .title {
-  position: absolute;
+  background-color: #005f6b98;
+  font-size: 50px;
   padding-left: 2%;
-  padding-top: 4%;
-  font-size: 44px;
+  color: #ffffff;
+  position: relative;
+  animation: slide-in-right 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  
 }
-.title-light {
-  color: black;
+
+
+@keyframes slide-in-right {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 .title-dark {
   color: rgb(255, 255, 255);
@@ -37,17 +50,23 @@
     width: 60%;  
   }
 
-.container-2 {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  align-items: center;
-  justify-content: center;
-  justify-items: center;
-  padding: 4%;
+  .container2 {
+    padding: 2%;
+    font-size: 18px;
+    border: 6px solid aquamarine;
+    width: 50%;
+  }
+  
+  .container2:hover {
+   
+    transform: scale(1.1);
   }
 
   .p {
+    display: flex;
+    flex-direction: column;
     padding-top:0%;
+    padding-left:10px;
     font-size: 22px;
   }
   .p-light {
