--- a/client/src/components/views/Shop/Shop.module.css
+++ b/client/src/components/views/Shop/Shop.module.css
@@ -19,90 +19,78 @@
 
 /* __________________________________________________ */
 
-.section2, .section3 {
-  margin-top: 1.2%;
+.section3 {
   display: flex;
   align-self: center;
 }
-  .sectionBanner {
+
+.sectionBanner {
     display: flex;
     align-items: center;
-    padding-bottom: 2%;
-  }
-  
-    .bannerImg {
-      width: 150px;
-      height:150px;
-      margin-right: 2%;
-      margin-left: 1%;
-      border-radius: 50%;
-    }
-  .input{
-    text-shadow:black;
-    background-color:#a1f7be7c;
-    ;
-    
-  }
-  .input:hover{
-    border: 2px solid beige;
+    background: linear-gradient(to right, rgba(0, 180, 204, 0.623) 0%, rgba(161,247,190,1) 100%);
   }
 
-  .flex{
+.bannerImg {
+    width: 150px;
+    height: 150px;
+    margin: 0 2%;
+    border-radius: 50%;
+}
+
+.paginado {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 4rem;
+    background-color: rgba(0, 0, 0, 0.672);
+    color: rgb(246, 251, 255);
+    animation:scale-up-horizontal-left 0.4s } @keyframes scale-up-horizontal-left{0%{transform:scaleX(.4);transform-origin:left center}100%{transform:scaleX(1);transform-origin:left center}}
+    .paginado a {
+        text-decoration: none;
+        color: white;
+    }
+    .numberBox {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 3px solid white;
+        width: 10%;
+        padding: 7px 100%;
+        border-radius: 4px;
+    }
+
+
+.searchBar {
     margin-left: 1%;
     display: flex;
     height: 30px;
     align-items: center;
-  }
-    .searchButton {
-      position: absolute;
-      margin-left: 14%;
-      transition: transform 0.3;
-      background-color:#a1f7be7c;
-      border: none;
-    } 
-    .searchButton:hover{
+    }
+    .searchBar input {
+        text-shadow:black;
+        background-color:#a1f7be7c;
+    }
+    .searchBar input:hover{
+      border: 2px solid beige;
+    }
+    .searchBar button {
+        position: absolute;
+        margin-left: 14%;
+        transition: transform 0.3;
+        background-color:#a1f7be7c;
+        border: none;
+    }
+    .searchBar button:hover{
       cursor: pointer;
       transform: scale(1.2);
-      }
-    
-
-  .sidebar {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    margin-bottom: 25px;
-    height:25%;
-    width: 16.2%;
-    border: 4px solid rgba(0, 0, 0, 0.096);
-    background-color:#a1f7be7c;
-    transition: transform 0.3s, filter 0.3s,width 0.2s;
-    border-radius: 5%;
-   
-  }
-  .sidebar > div {
-    margin-bottom: 15px;
-  }
-  .sidebar:hover {
-    transform: scale(1.1);
-    width: 20%;
-    transform-origin: left;
     }
     
-   .sidebar input {
-      margin: 0;
-      width: 1rem;
-      cursor: pointer;
-      height: 1rem;
-    }
 
   .productBox {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 20px;
-    padding: min(2%);
-    margin-top: -5%;
     width: 100%;
     height: 20%;
     }
@@ -135,11 +123,10 @@
       }
       .price {
         font-size: 100%;
-        margin-top: 2%;
-        margin-bottom: 5px;
+        margin: 2% 0;
+        margin-left: 4%;
         color: #007bff;
         font-weight: bold;
-        margin-left: 4%;
       }
       .item button {
         z-index: 9997;
